# cxx-patterns

./: .gitignore  Makefile.am  README.md  configure.ac
src/: main.cpp
